# TinyTorch

./: .gitignore  CMakeLists.txt  README.md  autodiff.py  basic.py  module.py  optimizer.py  setup.py  utils.py
cnn_mnist/: dataset.py  log  train.py
cnn_tiny_imagenet/: dataset.py  log  train.py
mlp_mnist/: dataset.py  log  train.py
src/: CMakeLists.txt  module.cuh  tensor.cuh
src/backend/cuda/: CMakeLists.txt  conv2d.cu  conv2d.cuh  cross_entropy.cu  cross_entropy.cuh  linear.cu  linear.cuh  max_pool2d.cu  max_pool2d.cuh  max_pooling2d.cu  max_pooling2d.cuh  relu.cu  relu.cuh  sigmoid.cu  sigmoid.cuh  tensor_binary_op.cu  tensor_binary_op.cuh  tensor_close.cu  tensor_close.cuh  tensor_eq.cu  tensor_eq.cuh  tensor_scalar_op.cu  tensor_scalar_op.cuh  tensor_unary_op.cu  tensor_unary_op.cuh  utils.cu  utils.cuh  utils.h
src/basic/: CMakeLists.txt  device.cc  device.h  mem.cc  mem.cu  mem.cuh  random.cc  random.h
src/op/: CMakeLists.txt  conv2d.cc  conv2d.h  cross_entropy.cc  cross_entropy.h  linear.cc  linear.h  max_pool2d.cc  max_pool2d.h  max_pooling2d.cc  max_pooling2d.h  relu.cc  relu.h  reshape.cc  reshape.h  sigmoid.cc  sigmoid.h  tensor_binary_op.cc  tensor_binary_op.h  tensor_close.cc  tensor_close.h  tensor_eq.cc  tensor_eq.h  tensor_scalar_op.cc  tensor_scalar_op.h  tensor_unary_op.cc  tensor_unary_op.h
src/pybind/: CMakeLists.txt  basic.cc  basic.h  op.cc  op.h  pybind.cc  tensor.cc  tensor.h
src/tensor/: CMakeLists.txt  tensor.cc  tensor.cu  tensor.cuh  tensor.h
src/utils/: utils.h
unittest/: conv2d.py  cross_entropy.py  linear.py  max_pool2d.py  relu.py  sigmoid.py
